--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "migrate": "npx prisma migrate deploy",
     "client:generate": "npx prisma generate",
     "start:prod": "npm run migrate && npm run client:generate && node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "NODE_ENV=testing dotenv -e .testing.env -- jest -c jest-e2e.json -i",
     "test:migrate": "npx dotenv -e .testing.env -- prisma migrate deploy",
     "test:watch": "jest --watch",
