--- a/.testing.env
+++ b/.testing.env
@@ -1,1 +1,3 @@
 DATABASE_URL=postgresql://testuser:testpass@localhost:5433/testdb
+WEATHER_API_BASE_URL=http://api.weatherapi.com/v1/current.json
+WEATHER_API_KEY=test-key
