--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "start:prod": "npm run migrate && npm run client:generate && node dist/main",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "test": "NODE_ENV=testing dotenv -e .testing.env -- jest -c jest-e2e.json -i",
-    "test:migrate": "npx dotenv -e .testing.env -- prisma migrate deploy",
+    "test:unit": "jest -c jest.unit.json",
+    "test:integration:migrate": "dotenv -e .testing.env -- npx prisma migrate deploy",
+    "test:integration:run": "dotenv -e .testing.env -- jest -c jest.integration.json -i",
+    "test:integration": "npm run test:integration:migrate && npm run test:integration:run",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
