Change old `.testing.env` to common `.env.test`

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test:unit": "jest -c jest.unit.json",
-    "test:integration:migrate": "dotenv -e .testing.env -- npx prisma migrate deploy",
-    "test:integration:run": "dotenv -e .testing.env -- jest -c jest.integration.json -i",
+    "test:integration:migrate": "dotenv -e .env.test -- npx prisma migrate deploy",
+    "test:integration:run": "dotenv -e .env.test -- jest -c jest.integration.json -i",
     "test:integration": "npm run test:integration:migrate && npm run test:integration:run",
     "test:all": "npm run test:integration && npm run test:unit",
     "test:watch": "jest --watch",
