--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,5 @@
 DATABASE_URL=postgresql://testuser:testpass@localhost:5433/testdb
 WEATHER_API_BASE_URL=http://api.weatherapi.com/v1/current.json
 WEATHER_API_KEY=test-key
+VISUAL_CROSSING_BASE_URL='https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline'
+VISUAL_CROSSING_API_KEY='mock-api-key'
