Add `joi` validation schema and update config service

--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,4 @@ WEATHER_API_BASE_URL=http://api.weatherapi.com/v1/current.json
 WEATHER_API_KEY=test-key
 VISUAL_CROSSING_BASE_URL='https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline'
 VISUAL_CROSSING_API_KEY='mock-api-key'
+TOKEN_TTL_HOURS=1
