--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^6.0.0",
@@ -37,6 +38,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "handlebars": "^4.7.8",
+    "joi": "^17.13.3",
     "nodemailer": "^7.0.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
