Add the ability to choose a provider order

--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,4 @@ WEATHER_API_KEY=test-key
 VISUAL_CROSSING_BASE_URL='https://weather.visualcrossing.com/VisualCrossingWebServices/rest/services/timeline'
 VISUAL_CROSSING_API_KEY='mock-api-key'
 TOKEN_TTL_HOURS=1
+WEATHER_PROVIDERS_PRIORITY=WEATHER_API,VISUAL_CROSSING
