Add redis for caching weather response

--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,6 @@ VISUAL_CROSSING_BASE_URL='https://weather.visualcrossing.com/VisualCrossingWebSe
 VISUAL_CROSSING_API_KEY='mock-api-key'
 TOKEN_TTL_HOURS=1
 WEATHER_PROVIDERS_PRIORITY=WEATHER_API,VISUAL_CROSSING
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_TTL=600
