--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -8,3 +8,9 @@ services:
       POSTGRES_PASSWORD: testpass
     ports:
       - "5433:5432"
+
+  redis:
+    image: redis:7
+    container_name: test-redis
+    ports:
+      - "6379:6379"
