--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "handlebars": "^4.7.8",
+    "ioredis": "^5.6.1",
     "joi": "^17.13.3",
     "nodemailer": "^7.0.3",
     "reflect-metadata": "^0.2.0",
