--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test:unit": "jest -c jest.unit.json",
     "test:integration:migrate": "dotenv -e .env.test -- npx prisma migrate deploy",
-    "test:integration:run": "dotenv -e .env.test -- jest -c jest.integration.json -i",
+    "test:integration:run": "dotenv -e .env.test -- jest -c jest.integration.json -i --detectOpenHandles",
     "test:integration": "npm run test:integration:migrate && npm run test:integration:run",
     "test:all": "npm run test:integration && npm run test:unit",
     "test:watch": "jest --watch",
