--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ioredis": "^5.6.1",
     "joi": "^17.13.3",
     "nodemailer": "^7.0.3",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
