Add explicit directory structure according to n-layered arch

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
       "@weather-api/*": ["modules/weather-api/*"],
       "@weather/*": ["modules/weather/*"],
       "@visual-crossing-api/*": ["modules/visual-crossing-api/*"],
-      "@utils/*": ["utils/*"],
+      "@shared/*": ["shared/*"],
       "@enums/*": ["enums/*"],
       "@database/*": ["database/*"],
       "@subscription/*": ["modules/subscription/*"],
