--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,22 +9,24 @@
     "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "paths": {
-      "@modules/*": ["modules/*"],
-      "@weather-api/*": ["modules/weather-api/*"],
-      "@weather/*": ["modules/weather/*"],
-      "@visual-crossing-api/*": ["modules/visual-crossing-api/*"],
-      "@shared/*": ["shared/*"],
-      "@enums/*": ["enums/*"],
-      "@database/*": ["database/*"],
-      "@subscription/*": ["modules/subscription/*"],
-      "@email/*": ["modules/email/*"],
-      "@logger/*": ["modules/logger/*"],
-      "@notification/*": ["modules/notification/*"],
-      "@config/*": ["modules/config/*"],
-      "@redis/*": ["modules/redis/*"],
-      "@metrics/*": ["modules/metrics/*"]
+      "@modules/*": ["src/modules/*"],
+      "@weather-api/*": ["src/modules/weather-api/*"],
+      "@weather/*": ["src/modules/weather/*"],
+      "@visual-crossing-api/*": ["src/modules/visual-crossing-api/*"],
+      "@shared/*": ["src/shared/*"],
+      "@database/*": ["src/database/*"],
+      "@subscription/*": ["src/modules/subscription/*"],
+      "@email/*": ["src/modules/email/*"],
+      "@logger/*": ["src/modules/logger/*"],
+      "@notification/*": ["src/modules/notification/*"],
+      "@config/*": ["src/modules/config/*"],
+      "@redis/*": ["src/modules/redis/*"],
+      "@metrics/*": ["src/modules/metrics/*"],
+      "@shared-types/*": ["libs/types/*"],
+      "@generated/*": ["libs/generated/*"],
+      "@utils/*": ["libs/utils/*"],
     },
     "incremental": true,
     "skipLibCheck": true,
