--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # compiled output
-/dist
-/node_modules
-/build
+**/dist
+**/node_modules
+**//build
+
+libs/generated
 
 # Logs
-logs
+**/logs
 *.log
 npm-debug.log*
 pnpm-debug.log*
