--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:email": "nest start email --watch",
+    "start:subscription": "nest start subscription --watch",
 
-    "proto:generate": "mkdir -p libs/generated && protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=libs/generated --ts_proto_opt=esModuleInterop=true,forceLong=string -I libs/proto libs/proto/email.proto",
+    "proto:generate": "mkdir -p libs/generated && find libs/proto -name '*.proto' | xargs protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=libs/generated --ts_proto_opt=esModuleInterop=true,forceLong=string -I libs/proto",
 
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
