Move `package` and `protoPath` to constants

--- a/apps/weather/tsconfig.json
+++ b/apps/weather/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/apps/email"
+    "outDir": "../../dist/apps/weather"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
