--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
 
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "migrate": "npx prisma migrate deploy",
-    "client:generate": "npx prisma generate",
+    "migrate": "npx prisma migrate deploy --schema=apps/subscription/prisma/schema.prisma",
+    "client:generate": "npx prisma generate --schema=apps/subscription/prisma/schema.prisma",
     "start:prod": "npm run migrate && npm run client:generate && node dist/main",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "test:unit": "jest -c jest.unit.json",
-    "test:integration:migrate": "dotenv -e .env.test -- npx prisma migrate deploy",
+    "test:unit": "npm run client:generate && jest -c jest.unit.json",
+    "test:integration:migrate": "dotenv -e .env.test -- npx prisma migrate deploy --schema=apps/subscription/prisma/schema.prisma && npm run client:generate",
     "test:integration:run": "dotenv -e .env.test -- jest -c jest.integration.json -i --detectOpenHandles",
     "test:integration": "npm run test:integration:migrate && npm run test:integration:run",
     "test:all": "npm run test:integration && npm run test:unit",
