--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "start:notification": "nest start notification --watch",
     "start:gateway": "nest start gateway --watch",
 
-    "proto:generate": "mkdir -p libs/generated && find libs/proto -name '*.proto' | xargs protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=libs/generated --ts_proto_opt=esModuleInterop=true,forceLong=string -I libs/proto",
+    "build:email": "webpack --config apps/email/webpack.config.js",
 
+    "proto:generate": "mkdir -p libs/generated && find libs/proto -name '*.proto' | xargs protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=libs/generated --ts_proto_opt=esModuleInterop=true,forceLong=string -I libs/proto",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "migrate": "npx prisma migrate deploy --schema=apps/subscription/prisma/schema.prisma",
@@ -78,6 +79,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "msw": "^2.10.2",
+    "node-loader": "^2.1.0",
     "prettier": "^3.0.0",
     "prisma": "^6.8.1",
     "source-map-support": "^0.5.21",
@@ -87,7 +89,9 @@
     "ts-node": "^10.9.1",
     "ts-proto": "^2.7.5",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
+    "typescript": "^5.1.3",
+    "webpack-cli": "^6.0.1"
   },
   "jest": {
     "moduleFileExtensions": [
