Add `Dockerfile` for `weather` microservice

--- a/apps/weather/Dockerfile
+++ b/apps/weather/Dockerfile
@@ -1,13 +1,11 @@
 FROM node:22-alpine AS builder
+WORKDIR /app
 
 RUN apk add --no-cache protoc
 
-WORKDIR /app
-
 COPY package*.json ./
 COPY nest-cli.json tsconfig*.json ./
-COPY apps/email/package*.json apps/email/
-
+COPY apps/weather/package*.json apps/weather/
 RUN npm ci
 
 COPY webpack.config.base.js ./
@@ -15,22 +13,19 @@ COPY apps ./apps
 COPY libs ./libs
 
 RUN npm run proto:generate
-
-RUN npm run build:email
+RUN npm run build:weather
 
 FROM node:22-alpine AS production
-
 WORKDIR /app
 
 COPY package*.json ./
-COPY apps/email/package*.json apps/email/
+COPY apps/weather/package*.json apps/weather/
 RUN npm ci --omit=dev
 
-COPY --from=builder /app/apps/email/dist/ ./dist/
+COPY --from=builder /app/apps/weather/dist ./dist
 COPY --from=builder /app/libs/proto ./libs/proto
-COPY --from=builder /app/apps/email/templates ./apps/email/templates
 
 ENV NODE_ENV=production
-EXPOSE 3001
+EXPOSE 3003
 
 CMD ["node", "dist/main.js"]
