--- a/.github/workflows/build-microservices.yaml
+++ b/.github/workflows/build-microservices.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [ email, weather ]
+        service: [ email, weather, subscription ]
     steps:
       - uses: actions/checkout@v4
 
