--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
 
     "build:email": "webpack --config apps/email/webpack.config.js",
     "build:weather": "webpack --config apps/weather/webpack.config.js",
+    "build:subscription": "webpack --config apps/subscription/webpack.config.js",
 
     "proto:generate": "mkdir -p libs/generated && find libs/proto -name '*.proto' | xargs protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=libs/generated --ts_proto_opt=esModuleInterop=true,forceLong=string -I libs/proto",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "migrate": "npx prisma migrate deploy --schema=apps/subscription/prisma/schema.prisma",
     "client:generate": "npx prisma generate --schema=apps/subscription/prisma/schema.prisma",
-    "start:prod": "npm run migrate && npm run client:generate && node dist/main",
+    "start:prod": "npm run migrate && node dist/main",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test:unit": "npm run client:generate && jest -c jest.unit.json",
