--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build:email": "webpack --config apps/email/webpack.config.js",
     "build:weather": "webpack --config apps/weather/webpack.config.js",
     "build:subscription": "webpack --config apps/subscription/webpack.config.js",
+    "build:notification": "webpack --config apps/notification/webpack.config.js",
 
     "proto:generate": "mkdir -p libs/generated && find libs/proto -name '*.proto' | xargs protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=libs/generated --ts_proto_opt=esModuleInterop=true,forceLong=string -I libs/proto",
     "start:dev": "nest start --watch",
