--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -20,5 +20,10 @@ jobs:
         run: |
           docker compose -f docker-compose.test.yml up -d && sleep 5s
 
+      - name: Install protoc
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y protobuf-compiler
+
       - name: Run integration tests
-        run: npm run test:integration
+        run: npm run test:integration:run
