--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,7 +1,7 @@
 services:
-  test-db:
+  postgres:
     image: postgres:15
-    container_name: test-db
+    container_name: postgres
     environment:
       POSTGRES_DB: testdb
       POSTGRES_USER: testuser
