--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test:unit": "npm run client:generate && jest -c jest.unit.json",
-    "test:integration:migrate": "dotenv -e .env.test -- npx prisma migrate deploy --schema=apps/subscription/prisma/schema.prisma && npm run client:generate",
-    "test:integration:run": "dotenv -e .env.test -- jest -c jest.integration.json -i --detectOpenHandles",
-    "test:integration": "npm run test:integration:migrate && npm run test:integration:run",
+
+    "test:integration:migrate": "dotenv -e apps/subscription/.env.test -- npm run migrate",
+    "test:integration:run": "npm run proto:generate && npm run test:weather:integration && npm run test:subscription:integration",
+    "test:weather:integration": "dotenv -e apps/weather/.env.test -- jest apps/weather --config jest.integration.json",
+    "test:subscription:integration": "npm run client:generate && npm run test:integration:migrate && dotenv -e apps/subscription/.env.test -- jest apps/subscription --config jest.integration.json",
     "test:all": "npm run test:integration && npm run test:unit",
     "test:architecture": "npx depcruise --config test/architecture/.dependency-cruiser.js src",
     "test:watch": "jest --watch",
