Add `PushGateway` for cache metrics

--- a/apps/weather/.env.test
+++ b/apps/weather/.env.test
@@ -7,3 +7,8 @@ WEATHER_PROVIDERS_PRIORITY=WEATHER_API,VISUAL_CROSSING
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_TTL=600
+
+PROMETHEUS_METRICS_JOB_NAME='weather'
+PROMETHEUS_PUSH_GATEWAY_URL=http://localhost:9091
+
+PROMETHEUS_METRICS_PUSH_INTERVAL=5000
