Implement email consumer and email providers

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -15,6 +15,12 @@ services:
     ports:
       - "6379:6379"
 
+  rabbitmq:
+    image: rabbitmq:4-management
+    ports:
+      - '5672:5672'
+      - '15672:15672'
+
 
   pushgateway:
     image: prom/pushgateway
