--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/serve-static": "^4.0.2",
     "@prisma/client": "^6.8.1",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
