--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@config/*": ["src/modules/config/*"],
       "@redis/*": ["src/modules/redis/*"],
       "@metrics/*": ["src/modules/metrics/*"],
-      "@shared-types/*": ["libs/types/*"],
+      "@grpc-types/*": ["libs/types/grpc/*"],
+      "@amqp-types/*": ["libs/types/amqp/*"],
       "@generated/*": ["libs/generated/*"],
       "@utils/*": ["libs/utils/*"],
       "@exceptions/*": ["libs/exceptions/*"],
