Implement integration tests for `EmailConsumer`

--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test:unit": "npm run client:generate && jest -c jest.unit.json",
     "test:integration:migrate": "dotenv -e apps/subscription/.env.test -- npm run migrate",
-    "test:integration:run": "npm run proto:generate && npm run test:weather:integration && npm run test:subscription:integration",
+    "test:integration:run": "npm run proto:generate && npm run test:weather:integration && npm run test:subscription:integration && npm run test:email:integration",
     "test:weather:integration": "dotenv -e apps/weather/.env.test -- jest apps/weather --config jest.integration.json",
+    "test:email:integration": "dotenv -e apps/email/.env.test -- jest apps/email --config jest.integration.json",
     "test:subscription:integration": "npm run client:generate && npm run test:integration:migrate && dotenv -e apps/subscription/.env.test -- jest apps/subscription --config jest.integration.json",
     "test:all": "npm run test:integration && npm run test:unit",
     "test:architecture:email": "npx depcruise --config apps/email/.dependency-cruiser.js apps/email/src",
@@ -76,6 +77,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/amqplib": "^0.10.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
