--- a/apps/email/package.json
+++ b/apps/email/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.4.19",
     "@nestjs/platform-express": "^10.0.0",
+    "amqplib": "^0.10.8",
     "dotenv": "^17.2.0",
     "handlebars": "^4.7.8",
     "joi": "^17.13.3",
