Add pino as logger

--- a/apps/email/.env.test
+++ b/apps/email/.env.test
@@ -7,3 +7,5 @@ SMTP_PORT=465
 SMTP_USER=smtp@example.net
 SMTP_PASS=supe_key
 MAIL_FROM="Genesis Case Task <smtp@example.net>"
+
+NODE_ENV=development
