--- a/apps/weather/.env.test
+++ b/apps/weather/.env.test
@@ -12,3 +12,5 @@ PROMETHEUS_METRICS_JOB_NAME='weather'
 PROMETHEUS_PUSH_GATEWAY_URL=http://localhost:9091
 
 PROMETHEUS_METRICS_PUSH_INTERVAL=5000
+
+NODE_ENV=development
