--- a/package.json
+++ b/package.json
@@ -68,7 +68,10 @@
     "handlebars": "^4.7.8",
     "ioredis": "^5.6.1",
     "joi": "^17.13.3",
+    "nestjs-pino": "^4.4.0",
     "nodemailer": "^7.0.3",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.1.1",
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
