Add `logger` to the whole application with different levels

--- a/apps/email/.env.test
+++ b/apps/email/.env.test
@@ -8,4 +8,4 @@ SMTP_USER=smtp@example.net
 SMTP_PASS=supe_key
 MAIL_FROM="Genesis Case Task <smtp@example.net>"
 
-NODE_ENV=development
+NODE_ENV=production
