--- a/apps/gateway/.env.test
+++ b/apps/gateway/.env.test
@@ -6,4 +6,4 @@ WEATHER_CLIENT_PORT=3003
 SUBSCRIPTION_CLIENT_HOST=subscription-service
 SUBSCRIPTION_CLIENT_PORT=3002
 
-NODE_ENV=development
+NODE_ENV=production
