--- a/apps/weather/.env.test
+++ b/apps/weather/.env.test
@@ -13,4 +13,4 @@ PROMETHEUS_PUSH_GATEWAY_URL=http://localhost:9091
 
 PROMETHEUS_METRICS_PUSH_INTERVAL=5000
 
-NODE_ENV=development
+NODE_ENV=production
