--- a/apps/subscription/.env.example
+++ b/apps/subscription/.env.example
@@ -4,14 +4,11 @@ DATABASE_URL=
 
 TOKEN_TTL_HOURS=
 
-EMAIL_CLIENT_HOST=
-EMAIL_CLIENT_PORT=
-
 WEATHER_CLIENT_HOST=
 WEATHER_CLIENT_PORT=
 
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
 
 NODE_ENV=
