--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,10 +5,6 @@ services:
     restart: always
     env_file:
       - apps/subscription/.env
-    environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
@@ -48,6 +44,8 @@ services:
       - app-network
     ports:
       - "3001:3001"
+    depends_on:
+      - rabbitmq
 
   subscription-service:
     build:
@@ -60,6 +58,7 @@ services:
       - postgres
       - weather-service
       - email-service
+      - rabbitmq
     networks:
       - app-network
     ports:
@@ -76,6 +75,7 @@ services:
       - subscription-service
       - email-service
       - weather-service
+      - rabbitmq
     networks:
       - app-network
     ports:
@@ -102,6 +102,43 @@ services:
     image: prom/pushgateway
     ports:
       - '9091:9091'
+    networks:
+      - app-network
+
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    networks:
+      - app-network
+
+  prom-tail:
+    image: grafana/promtail:latest
+    container_name: promtail
+    volumes:
+      - /var/log:/var/log
+      - ./promtail-config.yml:/etc/promtail/config.yml
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: -config.file=/etc/promtail/config.yml
+    depends_on:
+      - loki
+    networks:
+      - app-network
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana-storage:/var/lib/grafana
+    depends_on:
+      - loki
+    networks:
+      - app-network
 
   rabbitmq:
     image: rabbitmq:4-management
@@ -113,6 +150,7 @@ services:
 
 volumes:
   pgdata:
+  grafana-storage:
 
 networks:
   app-network:
