--- a/apps/subscription/.env.test
+++ b/apps/subscription/.env.test
@@ -15,3 +15,7 @@ RABBITMQ_HOST=localhost
 RABBITMQ_PORT=5672
 
 NODE_ENV=production
+
+PROMETHEUS_METRICS_JOB_NAME='subscription'
+PROMETHEUS_PUSH_GATEWAY_URL=http://localhost:9091
+PROMETHEUS_METRICS_PUSH_INTERVAL=60000
