Add metrics for notification microservice

--- a/apps/notification/.env.example
+++ b/apps/notification/.env.example
@@ -6,3 +6,7 @@ SUBSCRIPTION_CLIENT_HOST=
 SUBSCRIPTION_CLIENT_PORT=
 
 NODE_ENV=
+
+PROMETHEUS_METRICS_JOB_NAME=
+PROMETHEUS_PUSH_GATEWAY_URL=
+PROMETHEUS_METRICS_PUSH_INTERVAL=
