--- a/apps/notification/.env.test
+++ b/apps/notification/.env.test
@@ -8,3 +8,8 @@ SUBSCRIPTION_CLIENT_PORT=3002
 NODE_ENV=production
 
 SUBSCRIPTION_PRODUCER_TIMEOUT=3000
+
+PROMETHEUS_METRICS_JOB_NAME='notification'
+PROMETHEUS_PUSH_GATEWAY_URL=http://localhost:9091
+
+PROMETHEUS_METRICS_PUSH_INTERVAL=60000
