Add metrics for `Email` microservice

--- a/apps/email/.env.test
+++ b/apps/email/.env.test
@@ -1,7 +1,8 @@
 RABBITMQ_HOST=localhost
 RABBITMQ_PORT=5672
 
-FRONTEND_URL=http://localhost:3001
+PORT=3001
+
 SMTP_HOST=smtp.exaple.com
 SMTP_PORT=465
 SMTP_USER=smtp@example.net
@@ -9,3 +10,8 @@ SMTP_PASS=supe_key
 MAIL_FROM="Genesis Case Task <smtp@example.net>"
 
 NODE_ENV=production
+
+PROMETHEUS_METRICS_JOB_NAME='email'
+PROMETHEUS_PUSH_GATEWAY_URL=http://localhost:9091
+
+PROMETHEUS_METRICS_PUSH_INTERVAL=60000
