--- a/apps/email/.env.exmaple
+++ b/apps/email/.env.exmaple
@@ -1,4 +1,5 @@
-FRONTEND_URL=
+PORT=
+
 SMTP_HOST=
 SMTP_PORT=
 SMTP_USER=
@@ -8,3 +9,8 @@ RABBITMQ_HOST=
 RABBITMQ_PORT=
 
 NODE_ENV=
+
+PROMETHEUS_METRICS_JOB_NAME=
+PROMETHEUS_PUSH_GATEWAY_URL=
+
+PROMETHEUS_METRICS_PUSH_INTERVAL=
