Move sampling constants to `.env` file

--- a/apps/email/.env.exmaple
+++ b/apps/email/.env.exmaple
@@ -14,3 +14,7 @@ PROMETHEUS_METRICS_JOB_NAME=
 PROMETHEUS_PUSH_GATEWAY_URL=
 
 PROMETHEUS_METRICS_PUSH_INTERVAL=
+
+LOG_SAMPLE_RATE_DEBUG=
+LOG_SAMPLE_RATE_INFO=
+LOG_SAMPLE_RATE_WARN=
