--- a/apps/email/.env.test
+++ b/apps/email/.env.test
@@ -15,3 +15,7 @@ PROMETHEUS_METRICS_JOB_NAME='email'
 PROMETHEUS_PUSH_GATEWAY_URL=http://localhost:9091
 
 PROMETHEUS_METRICS_PUSH_INTERVAL=60000
+
+LOG_SAMPLE_RATE_DEBUG=0.2
+LOG_SAMPLE_RATE_INFO=0.3
+LOG_SAMPLE_RATE_WARN=0.2
