--- a/apps/gateway/.env.test
+++ b/apps/gateway/.env.test
@@ -7,3 +7,7 @@ SUBSCRIPTION_CLIENT_HOST=subscription-service
 SUBSCRIPTION_CLIENT_PORT=3002
 
 NODE_ENV=production
+
+LOG_SAMPLE_RATE_DEBUG=0.2
+LOG_SAMPLE_RATE_INFO=0.3
+LOG_SAMPLE_RATE_WARN=0.2
