--- a/apps/notification/.env.example
+++ b/apps/notification/.env.example
@@ -10,3 +10,7 @@ NODE_ENV=
 PROMETHEUS_METRICS_JOB_NAME=
 PROMETHEUS_PUSH_GATEWAY_URL=
 PROMETHEUS_METRICS_PUSH_INTERVAL=
+
+LOG_SAMPLE_RATE_DEBUG=
+LOG_SAMPLE_RATE_INFO=
+LOG_SAMPLE_RATE_WARN=
