--- a/apps/weather/.env.test
+++ b/apps/weather/.env.test
@@ -14,3 +14,7 @@ PROMETHEUS_PUSH_GATEWAY_URL=http://localhost:9091
 PROMETHEUS_METRICS_PUSH_INTERVAL=5000
 
 NODE_ENV=production
+
+LOG_SAMPLE_RATE_DEBUG=0.2
+LOG_SAMPLE_RATE_INFO=0.3
+LOG_SAMPLE_RATE_WARN=0.2
